# Earthquake_Enhanced

./: .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  data_manifest.yaml  pyproject.toml  requirements.txt  test_system.py
.github/workflows/: ci-historical-test.yml  ci.yml
backend/: api.py
backend/api/: __init__.py  main.py
backend/calculators/: seismic_moment.py
backend/experiments/: __init__.py
backend/experiments/tokyo/: __init__.py  run_experiment.py
backend/features/: config.yaml  correlation_engine.py  resonance.py  space_engine.py  tri_feature.py  utils.py
backend/features/tests/: __init__.py  test_correlation_engine.py  test_resonance.py  test_space_engine.py
backend/models/: __init__.py  database.py
backend/physics_engine/: config.json  engine_driver.py  historical_runner.py
backend/services/ingest/: usgs_event_ingest.py
backend/triangulation/: fault_index.py  triangulate.py
backend/utils/: __init__.py
data/metadata/: 2022_tokyo_07e0d7f2a.yaml
data/raw/usgs_events/: 2022_tokyo_07e0d7f2a.json
docs/: ALERT_POLICY.md  PR_CHECKLIST.md  REPRODUCIBILITY.md  TECHNICAL.md
experiments/tokyo/: experiment_driver.py  run_experiment.py  run_experiment.sh  triangulation_integration.py
frontend/: index.html
frontend/static/css/: main.css  styles.css  visualization.css
frontend/templates/: index.html  visualization.html
scripts/: generate_snapshot_manifest.py  publish_artifacts.py
tests/calculators/: test_seismic_moment.py
tests/triangulation/: test_triangulate.py  test_triangulation_integration.py
(+9 files in other folders)
